# ocs2_ws

./: MUJOCO_LOG.TXT  README.md
outputs/: whole_body_path_example.csv
src/ocs2_ros2/: README.md
src/ocs2_ros2/.github/workflows/: build-deb.yml  verify-deb.yml
src/ocs2_ros2/basic examples/ocs2_ballbot_ros/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_ballbot_ros/launch/: ballbot_ddp.launch.py  ballbot_mpc_mrt.launch.py  ballbot_slp.launch.py  ballbot_sqp.launch.py
src/ocs2_ros2/basic examples/ocs2_ballbot_ros/src/: BallbotDdpMpcNode.cpp  BallbotMpcMrtNode.cpp  BallbotSlpMpcNode.cpp  BallbotSqpMpcNode.cpp  DummyBallbotNode.cpp
src/ocs2_ros2/basic examples/ocs2_ballbot_ros/test/: ballbotIntegrationTest.cpp
src/ocs2_ros2/basic examples/ocs2_cartpole_ros/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_cartpole_ros/launch/: cartpole.launch.py
src/ocs2_ros2/basic examples/ocs2_cartpole_ros/src/: CartpoleMpcNode.cpp  DummyCartpoleNode.cpp
src/ocs2_ros2/basic examples/ocs2_double_integrator_ros/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_double_integrator_ros/launch/: double_integrator.launch.py
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator/include/ocs2_mobile_manipulator/: MobileManipulatorInterface.h
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator/src/: MobileManipulatorInterface.cpp
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator/src/constraint/: WholeBodyTrajectoryCost.cpp
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator/src/cost/: WholeBodyTrajectoryCost.cpp
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator_ros/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_quadrotor_ros/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_quadrotor_ros/launch/: quadrotor.launch.py
src/ocs2_ros2/basic examples/ocs2_quadrotor_ros/src/: DummyQuadrotorNode.cpp  QuadrotorMpcNode.cpp
src/ocs2_ros2/scripts/: build_release_deb.sh  clean_local_ci_artifacts.sh  consume_release_deb.sh  resolve_release_meta.sh
src/ocs2_tracer_jaka/: Nvblox.md  README.md
src/ocs2_tracer_jaka/esdf_simple_nav/: README.md  package.xml  setup.cfg  setup.py
src/ocs2_tracer_jaka/esdf_simple_nav/esdf_simple_nav/: simple_nav_node.py
src/ocs2_tracer_jaka/esdf_simple_nav/launch/: simple_nav.launch.py
src/ocs2_tracer_jaka/grid_map/: package.xml  setup.cfg  setup.py
src/ocs2_tracer_jaka/grid_map/grid_map/: esdf_rviz_node.py  mjcf_to_esdf.py
src/ocs2_tracer_jaka/grid_map/grid_map/maps/: tracer_jaka_zu5_scene_esdf.npz
src/ocs2_tracer_jaka/jaka_ros2/src/jaka_description/urdf/: tracer_jaka_zu5.urdf  tracer_jaka_zu5_demo.urdf
src/ocs2_tracer_jaka/jaka_ros2/src/jaka_driver/: CMakeLists.txt  package.xml
src/ocs2_tracer_jaka/jaka_ros2/src/jaka_driver/config/: jaka_servo_params.yaml  ros2_controllers.yaml
src/ocs2_tracer_jaka/jaka_ros2/src/jaka_driver/include/jaka_driver/: JAKAZuRobot.h  jktypes.h
src/ocs2_tracer_jaka/jaka_ros2/src/jaka_driver/launch/: moveit_real.launch.py  servo.launch.py
src/ocs2_tracer_jaka/jaka_ros2/src/jaka_driver/src/: jaka_edg_node.cpp  jaka_joy_to_servo.cpp  jaka_login.cpp  jaka_logout.cpp  jaka_tcp_sensor.cpp
src/ocs2_tracer_jaka/jaka_ros2/src/jaka_hardware_interface/: CMakeLists.txt  jaka_hardware_interface.xml  package.xml
src/ocs2_tracer_jaka/jaka_ros2/src/jaka_hardware_interface/include/jaka_hardware_interface/: ft_compensator.hpp  jaka_hardware_interface.hpp  model_params.h
src/ocs2_tracer_jaka/jaka_ros2/src/jaka_hardware_interface/src/: jaka_hardware_interface.cpp
src/ocs2_tracer_jaka/tracer_jaka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ocs2_tracer_jaka/tracer_jaka_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  tracer_jaka_zu5.ros2_control.xacro  tracer_jaka_zu5.srdf  tracer_jaka_zu5.urdf.xacro
src/ocs2_tracer_jaka/tracer_jaka_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ocs2_tracer_jaka/tracer_jaka_mujoco/: README.md  package.xml  setup.cfg  setup.py
src/ocs2_tracer_jaka/tracer_jaka_mujoco/config/: controllers.yaml  sensors.yaml
src/ocs2_tracer_jaka/tracer_jaka_mujoco/launch/: bridge.launch.py  moveit_demo.launch.py  nvblox.launch.py  ros2_control.launch.py
src/ocs2_tracer_jaka/tracer_jaka_mujoco/models/: scene.xml  tracer_jaka_zu5.xml  tracer_jaka_zu5_robot.xml
src/ocs2_tracer_jaka/tracer_jaka_mujoco/models/meshes/: aluminium_base_link.STL  jk_se_vi_200_link.stl
src/ocs2_tracer_jaka/tracer_jaka_mujoco/rviz/: view.rviz
src/ocs2_tracer_jaka/tracer_jaka_mujoco/tracer_jaka_mujoco/: camera_sensor.py  lidar_sensor.py  mujoco_bridge_node.py  sensors_common.py
src/ocs2_tracer_jaka/tracer_jaka_mujoco/urdf/: tracer_jaka_zu5.ros2_control.xacro  tracer_jaka_zu5.urdf  tracer_jaka_zu5_real.urdf
src/ocs2_tracer_jaka/tracer_jaka_mujoco/urdf/meshes/: tool0.STL  urbase_base_link.STL
src/ocs2_tracer_jaka/tracer_jaka_ocs2/: CMakeLists.txt  README.md  package.xml
src/ocs2_tracer_jaka/tracer_jaka_ocs2/config/: initial_positions.yaml  task.info  task_back.info  task_real.info  tracer_jaka.ros2_control.xacro  tracer_jaka.urdf.xacro  tracer_jaka_controllers_real.yaml  trajectory_target.yaml
src/ocs2_tracer_jaka/tracer_jaka_ocs2/include/: TracerJakaVisualization.h
src/ocs2_tracer_jaka/tracer_jaka_ocs2/launch/: ocs2_real.launch.py  ocs2_sim.launch.py
src/ocs2_tracer_jaka/tracer_jaka_ocs2/rviz/: tracer_jaka_ocs2.rviz
src/ocs2_tracer_jaka/tracer_jaka_ocs2/scripts/: send_target.py
src/ocs2_tracer_jaka/tracer_jaka_ocs2/src/: TracerJakaMpcNode.cpp  TracerJakaMrtNode.cpp  TracerJakaTargetNode.cpp  TracerJakaVisualization.cpp  csv_path_visualizer_node.cpp  tracer_jaka_joy_target_node.cpp  tracer_jaka_joy_whole_body_node.cpp  tracer_jaka_rectangle_trajectory_target_node.cpp  tracer_jaka_trajectory_target_node.cpp  tracer_jaka_whole_body_trajectory_node.cpp
(+30 files in other folders)
