<?xml version="1.0"?>
<package format="3">
  <name>esdf_simple_nav</name>
  <version>0.1.0</version>
  <description>Simple A* planner and Pure Pursuit controller for an ESDF-derived OccupancyGrid.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
